@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.707 2002/12/06 19:55:33 salo Exp $
+$NetBSD: CHANGES,v 1.708 2002/12/06 21:06:58 cjep Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -3843,3 +3843,4 @@ Changes to the packages collection and infrastructure in 2002:
 	Added scrollz-1.8l [grant 2002-12-06]
 	Updated silc-client to 0.9.10 [salo 2002-12-06]
 	Updated silc-server to 0.9.10 [salo 2002-12-06]
+	Updated atari800 to 1.2.5 [cjep 2002-12-06]
